# praefectus

./: .gitignore  COPYING  Makefile.am  README  configure.ac
game-design/: creatures.txt  weapons.txt
src/: Makefile.am  bsd.h  file-preamble
src/asn1-support/: Makefile.am  dummy.asn1  include-config-h.inc
src/chat-demo/: chat-demo.c
src/libpraefectus/: -system-ack.h  -system-commgr.h  -system-commit.h  -system-dispatch.h  -system-htm.h  -system-join.h  -system-mod.h  -system-routemgr.h  -system-router.h  -system-state.h  -system.h  DESIGN.txt  Makefile.am  ack-table.c  ack-table.h  bsd.h  clock.c  clock.h  commitment-chain.c  commitment-chain.h  common.h  context.c  context.h  defs.h  dsa-parms.h  dsa.c  dsa.h  dynamic.c  dynamic.h  event.c  event.h  flat-netid.c  flat-netid.h  gen-dsa-parms.c  hash-tree.c  hash-tree.h  hl-msg.c  hl-msg.h  keccak-rename.h  keccak.h  (+36 more)
src/libpraefectus/asn1-support/: Makefile.am  dummy.asn1  include-config-h.inc
src/libpraefectus/keccak/: COPYING  KeccakF-1600-64.macros  KeccakF-1600-opt64.c  KeccakSponge.c  KeccakSponge.h  README
src/libpraefectus/messages/: Makefile.am  messages.asn1
src/libpraefectus/udp-message-bus/: udp-message-bus.c  udp-message-bus.h
src/nbodies/: README  nbodies-config.h  nbodies-core.c  nbodies-vis.c  nbodies-vnet-4-ideal.c  nbodies-vnet-8-latent-lossy.c
src/praefectus/: alloc.h  common.h  frac.h  game-state.h  global-config.c  global-config.h
src/praefectus/asn1/: Makefile.am  configuration.asn1  events.asn1
src/praefectus/game/: context.c  context.h  event.c  event.h  gameplay.c  gameplay.h  object.c  object.h
src/praefectus/graphics/: 437.xpm  canvas.c  canvas.h  console.c  console.h  crt.c  crt.h  font.c  font.h  fraktur.c  fraktur.h
src/praefectus/top/: main-menu.c  main-menu.h  main.c  test-state.c  test-state.h
src/praefectus/ui/: menu.c  menu.h  utf8-cp437.inc
src/udp-common/: Makefile.am  udp-messages.asn1
src/vertexd/: example-config-ipv4-internet.xml  example-config.xml  vertexd.c
src/vertexd/config/: Makefile.am  config.asn1
test/: Makefile.am  test.c  test.h
test/libpraefectus/: ack-table.c  clock-sim.c  clock.c  commitment-chain.c  core-fullstack.c  core.c  dsa.c  dynamic.c  hash-tree.c  hl-msg.c  metatransactor.c  outbox.c  system-fullstack.c  system-unit-expect-macro.h  system-unit.c  system-wire-expect-macro.h  system-wire.c  system.c  transactor.c  virtual-bus.c
